--- a/B09_01/.settings/org.eclipse.core.resources.prefs
+++ b/B09_01/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,5 @@ encoding//src/thuchanh/FrmEndOfYear.java=UTF-8
 encoding//src/thuchanh/FrmFindUsers.java=UTF-8
 encoding//src/thuchanh/FrmGhiChu.java=UTF-8
 encoding//src/thuchanh/FrmLienHe.java=UTF-8
+encoding//src/thuchanh/FrmUpdDelUser.java=UTF-8
 encoding/<project>=windows-1252
